<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CadastroAdministrador">


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="Cadastro de Administrador"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginTop="82dp"
        android:text="Nome"
        android:layout_alignLeft="@+id/textView13" />

    <EditText
        android:id="@+id/campoFuncionario"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/info_nome"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginTop="165dp"
        android:text="Empresa"
        android:layout_alignLeft="@+id/textView13" />

    <EditText
        android:id="@+id/campoEmpresa"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Informe a empresa"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_centerVertical="true"
        android:text="@string/login"
        android:layout_alignLeft="@+id/textView13" />

    <EditText
        android:id="@+id/campoLogin"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/info_login"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginBottom="165dp"
        android:text="@string/senha"
        android:layout_alignLeft="@+id/textView13" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-165dp"
        android:ems="10"
        android:hint="@string/info_senha"
        android:textAlignment="center"
        android:gravity="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botaoCadastro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="Cadastrar" />


</RelativeLayout>