<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CadastroFuncionario"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Informe todos os dados pessoais"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nomeFunc"
        android:layout_alignStart="@+id/cargoFunc"
        android:layout_marginBottom="-136dp"
        android:text="@string/nome"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nomeFunc"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/info_nome"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/cargoFunc"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/info_cargo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cargoFunc"
        android:layout_alignStart="@+id/nomeFunc"
        android:text="@string/cargo"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/nomeFunc" />

    <EditText
        android:id="@+id/telefoneCampo"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Informe o telefone"
        android:inputType="phone"
        android:maxLength="15"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/telefoneCampo"
        android:layout_alignStart="@+id/textView8"
        android:text="Telefone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cadFunc"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nomeFunc"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:text="Dados de Acesso >"
        android:textSize="16sp"
        android:layout_alignRight="@+id/nomeFunc" />

    <Button
        android:id="@+id/backCadFunc"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignTop="@+id/cadFunc"
        android:text="Voltar"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/textView8" />

</RelativeLayout>